--- a/cadastro.html
+++ b/cadastro.html
@@ -27,13 +27,18 @@
         <div id="res">
 
         </div>
+        <div id="hora">
+            
+
+        </div>
 
         <table id="corpo">
             <tr>
                 <th> NOME </th>
                 <th> TELEFONE</th>
                 <th> DATA DE ENTRADA</th>
-                <th> CPF</th>               
+                <th> CPF</th>    
+                <th> HORARIO DO CADASTRO</th>           
             </tr>
             <tr>
 
