--- a/cadastro.html
+++ b/cadastro.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <script src="Javs.js"></script>
+    <script src="phps.php"></script>
     <title>Cadastro das empresas</title>
 </head>
 <body>
